fixes general spacing, and styles navbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css?family=Indie+Flower'); */
-
 @font-face {
   font-family: '5yearsoldfont';
   src: url('./assests/5yearsoldfont.ttf'); /* IE9 Compat Modes */
@@ -11,23 +9,8 @@
 }
 
 body {
-
-  /* padding: -10; */
-  /* width: 95%; */
-  /* height: 100%; */
-  /*border: 20px;*/
-  /* font-family: cursive; */
-  /* -webkit-font-smoothing: antialiased; */
-  /* -moz-osx-font-smoothing: grayscale; */
-  /*border: 10px solid darkgray;*/
-    /* border: 10px solid transparent; */
-    /* padding: 15px; */
-    /* -webkit-border-image: url(./assests/bugs5.jpg) 30% round; Safari 3.1-5 */
-    /* -o-border-image: url(./assests//bugs2.jpg) 30% round; Opera 11-12.1 bugs 2? is tht missing? */
-    /* border-image: url(./assests//bugs5.jpg) 30% round; */
     background: linear-gradient(transparent, #60CFF6, #3AC655 );
     margin-bottom: 0px;
-    /* padding-bottom: 20px; */
     border: 5px solid black ;
     border-image: 
         url("./assests/thincrayonlineblu.svg")  /* source */
@@ -35,12 +18,11 @@ body {
         30px /    /* width */
         1px       /* outset */
         round;  
-
 }
 
 .Bug {
   position: absolute;
-  top: 12.5vh;
+  top: 12.5vh; /* don't change */
   right: 0.5%;
   padding-left: 8%;
   padding-right: 8%;
@@ -52,41 +34,30 @@ a {
 }
 
 .Bugs{
-  
-    /* background-image: linear-gradient(transparent, white 13%), url('./assests/rolypolyimage1.jpg'); */
-    
     background-repeat: no-repeat;
     background-size: 50% auto;
-    height: 98.4vh; /* here's the white space! */
+    height: 98.4vh; /* don't change */
     background-Position: 'center';
-    /* padding-left: 30px; */
     border-left: 20%;
     font-family: "5yearsoldfont";
-    
-    
 }
 
 h1{
   padding-top: 15px;
   text-align: center;
-  color: darkslategrey;
-  
+  color: darkslategrey;  
 }
 
-.registrationForm {
+.registrationForms {
   width: 88%;
   height: 30px;
   padding-left: 80px;
-  /* padding-bottom: 80px; */
   margin: 0 auto;
   display: block;
-  /* border: 3px solid #b7b7b7; */
   font-size: 1.5em;
   -o-text-overflow: clip;
   text-overflow: clip;
-  /* margin-bottom: 10px; */
   color: darkslategrey;
-  
 }
 
 .form-input {
@@ -96,113 +67,93 @@ h1{
 }
 
 .registrationForm {
-  width: 320px;
-  height: 55px;
-  padding: 10px 20px 0px 20px;
-  margin-right: 12px;
-  /* border: 3px solid #b7b7b7; */
-  /* font needs checking */
+  padding: 6px 10px 0px 10px;
   font-size: 1.5em;
-  /* -webkit-border-radius: 36px; */
-  /* border-radius: 36px; */
   color: darkslategrey;
-  -o-text-overflow: clip;
-  text-overflow: clip;
-  
 }
 
 .loginButton{
   background-color: #FEFAF5;
-    /* -moz-border-radius:15px; */
-    /* -webkit-border-radius:15px; */
-    /* border-radius:15px; */
-    display:inline-block;
-    cursor:pointer;
-    color:darkslategrey;
-    /* font-family:Arial; */
-    font-size:23px;
-    padding:16px 27px 0px 27px;
-    text-decoration:none;
-    text-shadow:2px 1px 3px #696969;
-    border: 4px solid #696969;
-    border-image: 
-      url("./assests/thincrayonlinepurple.svg")  /* source */
-      45 /                    /* slice */
-      30px /    /* width */
-      6px       /* outset */
-      round; 
+  display:inline-block;
+  cursor:pointer;
+  color:darkslategrey;
+  font-size:23px;
+  padding:4px 27px 2px 27px;
+  text-decoration:none;
+  text-shadow:2px 1px 3px #696969;
+  border: 4px solid #696969;
+  border-image: 
+    url("./assests/thincrayonlinepurple.svg")  /* source */
+    45 /                    /* slice */
+    30px /    /* width */
+    6px       /* outset */
+    round; 
   
 }
 
 .loginForm{
-  /* width: 88%; */
-  /* height: 30px; */
-  /* padding-left: 80px; */
-  /* padding-bottom: 80px; */
-  /* margin: 0 auto; */
-  /* display: block; */
-  /* border: 3px solid #b7b7b7; */
-  /* font-size: 1.5em; */
-  /* -webkit-border-radius: 36px; */
-  /* border-radius: 36px; */
-  /* -o-text-overflow: clip; */
-  /* text-overflow: clip; */
-  /* margin-bottom: 10px; */
-  /* color: darkslategrey; */
-
-  /* width: 320px; */
-  /* height: 50%; */
   padding: 10px 10px 0px 10px;
-  /* margin-right: 12px; */
-  /* font needs checking */
   font-size: 1.5em;
-  /* -webkit-border-radius: 6px; */
-  /* border-radius: 6px; */
   color: darkslategrey;
-  /* -o-text-overflow: clip; */
-  /* text-overflow: clip; */
-  /* background-color: aquamarine; */
+}
+
+.flexLeft {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end ;
+}
+
+.flexCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center ;
+}
+
+.inputField {
+  background-color: #FEFAF5;
+  margin-left: 4px;
+  margin-bottom: 4px;
   border: 4px solid #696969;
+  border-image: 
+    url("./assests/thincrayonlinered.svg")  /* source */
+    45 /                    /* slice */
+    30px /    /* width */
+    6px       /* outset */
+    round; 
+  }
+
+svg {
+  z-index: -1;
+}
+
+nav {
+  text-align: center;
+  border: 4px solid #696969;
+  margin: 0px 0px 10px 0px;
+  border-image: 
+    url("./assests/thincrayonlinepurple.svg")  /* source */
+    45 /                    /* slice */
+    30px /    /* width */
+    2px       /* outset */
+    round; 
+}
+nav > :nth-child(n) {
+  padding: 0px 10px 0px 10px
+}
+
+nav > :nth-child(n):hover {
+  border: 4px solid #696969;
+  text-shadow:2px 1px 3px #696969;
   border-image: 
     url("./assests/thincrayonlinegreen.svg")  /* source */
     45 /                    /* slice */
-    30px /    /* width */
-    4px       /* outset */
-    round; 
-
-  }
-
-  .flexLeft {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end ;
-  }
-
-  .flexCenter {
-    display: flex;
-    align-items: center;
-    justify-content: center ;
-  }
-
-  .inputField {
-    background-color: #FEFAF5;
-    margin-left: 4px;
-    margin-bottom: 4px;
-    border: 4px solid #696969;
-    border-image: 
-      url("./assests/thincrayonlinered.svg")  /* source */
-      45 /                    /* slice */
-      30px /    /* width */
-      6px       /* outset */
-      round; 
-  }
-
-  svg {
-    z-index: -1;
-  }
+    40px /    /* width */
+    0px       /* outset */
+    round;
+}
 
   /*  media queries  */
-  @media screen and (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .Bug {
     width: 300px;
     margin: 35px 10px 0px 10px;
@@ -223,12 +174,11 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center ;
-}
+  }
 
   .inputField {
     width: 70%;
   }
-
 }
 
 /* DOODLE BUG */
@@ -278,4 +228,3 @@ h1{
   stroke: #ff00ff;
   animation: wiggle 6s ease infinite alternate
 }
-
